--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   },
   "author": "Michael Schoonmaker <michael.r.schoonmaker@gmail.com> (http://www.schoonology.com/)",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "csv": "~0.4.2",
+    "debug": "~2.2.0",
+    "minimist": "~1.1.1",
+    "through": "~2.3.7",
+    "weighted": "~0.3.0"
+  }
 }
