--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.2.0",
     "minimist": "~1.1.1",
     "readable-stream": "~1.1.13",
+    "stream-combiner": "~0.2.2",
     "through": "~2.3.7",
     "weighted": "~0.3.0"
   }
